# swc-node

./: .eslintignore  .eslintrc.yml  .gitignore  .npmrc  .prettierignore  Cargo.toml  LICENSE  README.md  index.js  jest-test.js  jest.config.js  lerna.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  register.js  renovate.json  tsconfig.js.json  tsconfig.json  tsconfig.project.json  tsconfig.test.json
.changeset/: great-goats-trade.md  ninety-singers-roll.md  rude-bugs-invite.md  smooth-ties-count.md  spotty-mails-relate.md  three-rockets-jump.md
.github/: dependabot.yml
.github/workflows/: CI.yml  auto-merge.yml  bench.yml
bench/: cli.ts  index.js  index.ts
bench/fixture/: common.ts  package.json  rxjs.ts  ts.ts  tsconfig.json
scripts/: tsconfig.json  upload-to-release.js
src/: jest.rs  lib.rs  plugin.rs
