[package]
name = "node-swc"
version = "0.1.0"
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "0.4"
napi-derive = "0.4"
once_cell = "1.4"
serde_json = "1"
swc = { git = "https://github.com/swc-project/swc" }

[target.'cfg(all(unix, not(target_env = "musl")))'.dependencies]
jemallocator = { version = "0.3", features = ["disable_initial_exec_tls"] }

[build-dependencies]
napi-build = "0.2"
