[package]
name = "node-swc"
version = "0.0.1"
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "0.4" }
napi-derive = { version = "0.4" }
once_cell = "1.4"
serde = "1"
serde_json = "1"
swc = { git = "https://github.com/swc-project/swc" }
swc_common = { git = "https://github.com/swc-project/swc", features = ["tty-emitter"] }
swc_ecmascript = { git = "https://github.com/swc-project/swc", features = ["parser", "transforms"] }

[target.'cfg(all(unix, not(target_env = "musl")))'.dependencies]
jemallocator = { version = "0.3", features = ["disable_initial_exec_tls"] }

[build-dependencies]
napi-build = "0.2"

[profile.release]
opt-level = 3
lto = true
