[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2018"
name = "node-swc"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version = "0.5", features = ["serde-json"]}
napi-derive = {version = "0.5"}
once_cell = "1.4"
serde = {version = "1"}
serde_json = "1"
swc = {git = "https://github.com/swc-project/swc"}
swc_common = {git = "https://github.com/swc-project/swc", features = ["tty-emitter"]}
swc_ecma_visit = {git = "https://github.com/swc-project/swc"}
swc_ecmascript = {git = "https://github.com/swc-project/swc", features = ["parser", "transforms"]}

[target.'cfg(all(unix, not(target_env = "musl")))'.dependencies]
jemallocator = {version = "0.3", features = ["disable_initial_exec_tls"]}

[target.'cfg(windows)'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = {version = "0.2"}

[profile.release]
lto = true
opt-level = 3
